fixed sticky header on mobile

--- a/src/css/outfits_features.css
+++ b/src/css/outfits_features.css
@@ -222,9 +222,11 @@ div.short_group {
 .panel-header.sticky {
     position: -webkit-sticky;
     position: sticky;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
+    align-self: flex-start;
     top: 0;
     height: 100px;
     background: #f7f7f7;
